@@ -1,3 +1,10 @@
+Mon Jan 12 11:00:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Array_Base.h:
+        * ace/Array_Map.h:
+        * ace/Vector_T.h:
+          Doxygen changes
+
 Mon Jan 12 09:26:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/svn/config:
